# VideoBackgroundExtractor

./: LICENSE  Makefile  README.md  Types.py  VideoBackgroundExtractor-1.0.0-py3-none-any.whl  VideoBackgroundExtractor.py  example.py  pyproject.toml  requrements.txt  setup.py
VideoBackgroundExtractor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/video_background_extractor/: Types.py  VideoBackgroundExtractor.py
videobackgroundextractor/: Types.py  VideoBackgroundExtractor.py  __init__.py
