[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-background-extractor"
version = "1.0.10"
authors = [
  { name="Henrique Schmitz", email="sch.henrique@gmail.com" },
]
description = "Library to extract background from static video. "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
  "torch>=2.3.0",
  "numpy",
  "opencv-python"
]

[tool.poetry]
repository = "https://github.com/HenriqueSchmitz/VideoBackgroundExtractor"
exclude = [
  "samples/*",
  "example.mp4",
  "example.py",
  "*.pdf"
]